// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Section renders 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
  >
    <View
      pointerEvents="none"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 10,
            "position": "absolute",
            "right": 0,
            "top": 20,
          },
          undefined,
        ]
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={41}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -40,
              "position": "absolute",
              "top": 14,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="left"
              x1="1"
              x2="0"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "left",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={-28}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={41}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": 14,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="right"
              x1="0"
              x2="1"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "right",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={-28}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth="100%"
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 14,
              "position": "absolute",
              "top": "100%",
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottom"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottom",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-28}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth="100%"
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 14,
              "position": "absolute",
              "top": -40,
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="top"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "top",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-28}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -40,
              "position": "absolute",
              "top": -40,
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={54}
              cy={54}
              fx={54}
              fy={54}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topLeft"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,54 a54,54 0 0 1 54 -54 v40 v14 h-14 h-40 Z"
            fill={
              Array [
                1,
                "topLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": -40,
              "transform": Array [
                Object {
                  "translateX": -14,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={54}
              fx={0}
              fy={54}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topRight"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,0 a54,54 0 0 1 54,54 h-40 h-14 v-14 v-40 Z"
            fill={
              Array [
                1,
                "topRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -40,
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateY": -14,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={54}
              cy={0}
              fx={54}
              fy={0}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomLeft"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M54,54 a54,54 0 0 1 -54,-54 h40 h14 v14 v40 Z"
            fill={
              Array [
                1,
                "bottomLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateX": -14,
                },
                Object {
                  "translateY": -14,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomRight"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M54,0 a54,54 0 0 1 -54,54 v-40 v-14 h14 h40 Z"
            fill={
              Array [
                1,
                "bottomRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth="100%"
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGMask
              height="100%"
              maskContentUnits={1}
              maskTransform={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              maskUnits={0}
              name="maskPaintBelow"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={4294967295}
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    -14,
                    0,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x="100%"
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    -14,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x={0}
                y="100%"
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    -14,
                    -14,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x="100%"
                y="100%"
              />
            </RNSVGMask>
          </RNSVGDefs>
          <RNSVGRect
            fill={4280637372}
            fillOpacity={0.1}
            height="100%"
            mask="maskPaintBelow"
            propList={
              Array [
                "fill",
                "fillOpacity",
              ]
            }
            width="100%"
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
          },
          undefined,
          Array [
            Array [
              undefined,
              Object {
                "backgroundColor": "#F7F8FA",
                "borderRadius": 14,
              },
            ],
            Object {
              "alignSelf": "stretch",
            },
          ],
        ]
      }
    >
      <View
        pointerEvents="box-none"
      >
        <View
          pointerEvents="none"
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth={7}
            focusable={false}
            height="100%"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": -6,
                  "position": "absolute",
                  "top": 15,
                },
                Object {
                  "flex": 0,
                  "height": "100%",
                  "width": 7,
                },
              ]
            }
            width={7}
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="left"
                  x1="1"
                  x2="0"
                  y1="0"
                  y2="0"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "left",
                  ]
                }
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={6}
                x={0}
                y={-30}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth={7}
            focusable={false}
            height="100%"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": "100%",
                  "position": "absolute",
                  "top": 15,
                },
                Object {
                  "flex": 0,
                  "height": "100%",
                  "width": 7,
                },
              ]
            }
            width={7}
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="right"
                  x1="0"
                  x2="1"
                  y1="0"
                  y2="0"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "right",
                  ]
                }
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={6}
                x={0}
                y={-30}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={7}
            bbWidth="100%"
            focusable={false}
            height={7}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": 15,
                  "position": "absolute",
                  "top": "100%",
                },
                Object {
                  "flex": 0,
                  "height": 7,
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="bottom"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="1"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "bottom",
                  ]
                }
                height={6}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={-30}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={7}
            bbWidth="100%"
            focusable={false}
            height={7}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": 15,
                  "position": "absolute",
                  "top": -6,
                },
                Object {
                  "flex": 0,
                  "height": 7,
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="top"
                  x1="0"
                  x2="0"
                  y1="1"
                  y2="0"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "top",
                  ]
                }
                height={6}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={-30}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={22}
            bbWidth={22}
            focusable={false}
            height={22}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": -6,
                  "position": "absolute",
                  "top": -6,
                },
                Object {
                  "flex": 0,
                  "height": 22,
                  "width": 22,
                },
              ]
            }
            width={22}
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={21}
                  cy={21}
                  fx={21}
                  fy={21}
                  gradient={
                    Array [
                      0.7142857142857143,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="topLeft"
                  rx={21}
                  ry={21}
                />
              </RNSVGDefs>
              <RNSVGPath
                d="M0,21 a21,21 0 0 1 21 -21 v6 a15,15 0 0 0 -15,15 h-6 Z"
                fill={
                  Array [
                    1,
                    "topLeft",
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={22}
            bbWidth={22}
            focusable={false}
            height={22}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": "100%",
                  "position": "absolute",
                  "top": -6,
                  "transform": Array [
                    Object {
                      "translateX": -15,
                    },
                  ],
                },
                Object {
                  "flex": 0,
                  "height": 22,
                  "width": 22,
                },
              ]
            }
            width={22}
          >
            <RNSVGGroup
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            >
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={0}
                  cy={21}
                  fx={0}
                  fy={21}
                  gradient={
                    Array [
                      0.7142857142857143,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="topRight"
                  rx={21}
                  ry={21}
                />
              </RNSVGDefs>
              <RNSVGPath
                d="M0,0 a21,21 0 0 1 21,21 h-6 a15,15 0 0 0 -15,-15 v-6 Z"
                fill={
                  Array [
                    1,
                    "topRight",
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={22}
            bbWidth={22}
            focusable={false}
            height={22}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": -6,
                  "position": "absolute",
                  "top": "100%",
                  "transform": Array [
                    Object {
                      "translateY": -15,
                    },
                  ],
                },
                Object {
                  "flex": 0,
                  "height": 22,
                  "width": 22,
                },
              ]
            }
            width={22}
          >
            <RNSVGGroup
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            >
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={21}
                  cy={0}
                  fx={21}
                  fy={0}
                  gradient={
                    Array [
                      0.7142857142857143,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="bottomLeft"
                  rx={21}
                  ry={21}
                />
              </RNSVGDefs>
              <RNSVGPath
                d="M21,21 a21,21 0 0 1 -21,-21 h6 a15,15 0 0 0 15,15 v6 Z"
                fill={
                  Array [
                    1,
                    "bottomLeft",
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={22}
            bbWidth={22}
            focusable={false}
            height={22}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": "100%",
                  "position": "absolute",
                  "top": "100%",
                  "transform": Array [
                    Object {
                      "translateX": -15,
                    },
                    Object {
                      "translateY": -15,
                    },
                  ],
                },
                Object {
                  "flex": 0,
                  "height": 22,
                  "width": 22,
                },
              ]
            }
            width={22}
          >
            <RNSVGGroup
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            >
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={0}
                  cy={0}
                  fx={0}
                  fy={0}
                  gradient={
                    Array [
                      0.7142857142857143,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="bottomRight"
                  rx={21}
                  ry={21}
                />
              </RNSVGDefs>
              <RNSVGPath
                d="M21,0 a21,21 0 0 1 -21,21 v-6 a15,15 0 0 0 15,-15 h6 Z"
                fill={
                  Array [
                    1,
                    "bottomRight",
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          onLayout={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
              },
              undefined,
              Array [
                Object {
                  "backgroundColor": "#F7F8FA",
                  "borderRadius": 14,
                  "padding": 16,
                },
                Object {
                  "alignSelf": "stretch",
                },
              ],
            ]
          }
        >
          <View>
            <View>
              Hello world
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`component: Section renders with title 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
  >
    <View
      pointerEvents="none"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 10,
            "position": "absolute",
            "right": 0,
            "top": 20,
          },
          undefined,
        ]
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={41}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -40,
              "position": "absolute",
              "top": 14,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="left"
              x1="1"
              x2="0"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "left",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={-28}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={41}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": 14,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="right"
              x1="0"
              x2="1"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "right",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={-28}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth="100%"
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 14,
              "position": "absolute",
              "top": "100%",
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottom"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottom",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-28}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth="100%"
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 14,
              "position": "absolute",
              "top": -40,
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="top"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "top",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-28}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -40,
              "position": "absolute",
              "top": -40,
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={54}
              cy={54}
              fx={54}
              fy={54}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topLeft"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,54 a54,54 0 0 1 54 -54 v40 v14 h-14 h-40 Z"
            fill={
              Array [
                1,
                "topLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": -40,
              "transform": Array [
                Object {
                  "translateX": -14,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={54}
              fx={0}
              fy={54}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topRight"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,0 a54,54 0 0 1 54,54 h-40 h-14 v-14 v-40 Z"
            fill={
              Array [
                1,
                "topRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -40,
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateY": -14,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={54}
              cy={0}
              fx={54}
              fy={0}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomLeft"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M54,54 a54,54 0 0 1 -54,-54 h40 h14 v14 v40 Z"
            fill={
              Array [
                1,
                "bottomLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateX": -14,
                },
                Object {
                  "translateY": -14,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomRight"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M54,0 a54,54 0 0 1 -54,54 v-40 v-14 h14 h40 Z"
            fill={
              Array [
                1,
                "bottomRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth="100%"
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGMask
              height="100%"
              maskContentUnits={1}
              maskTransform={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              maskUnits={0}
              name="maskPaintBelow"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={4294967295}
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    -14,
                    0,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x="100%"
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    -14,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x={0}
                y="100%"
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    -14,
                    -14,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x="100%"
                y="100%"
              />
            </RNSVGMask>
          </RNSVGDefs>
          <RNSVGRect
            fill={4280637372}
            fillOpacity={0.1}
            height="100%"
            mask="maskPaintBelow"
            propList={
              Array [
                "fill",
                "fillOpacity",
              ]
            }
            width="100%"
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
          },
          undefined,
          Array [
            Array [
              undefined,
              Object {
                "backgroundColor": "#F7F8FA",
                "borderRadius": 14,
              },
            ],
            Object {
              "alignSelf": "stretch",
            },
          ],
        ]
      }
    >
      <View
        pointerEvents="box-none"
      >
        <View
          pointerEvents="none"
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth={7}
            focusable={false}
            height="100%"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": -6,
                  "position": "absolute",
                  "top": 15,
                },
                Object {
                  "flex": 0,
                  "height": "100%",
                  "width": 7,
                },
              ]
            }
            width={7}
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="left"
                  x1="1"
                  x2="0"
                  y1="0"
                  y2="0"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "left",
                  ]
                }
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={6}
                x={0}
                y={-30}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth={7}
            focusable={false}
            height="100%"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": "100%",
                  "position": "absolute",
                  "top": 15,
                },
                Object {
                  "flex": 0,
                  "height": "100%",
                  "width": 7,
                },
              ]
            }
            width={7}
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="right"
                  x1="0"
                  x2="1"
                  y1="0"
                  y2="0"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "right",
                  ]
                }
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={6}
                x={0}
                y={-30}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={7}
            bbWidth="100%"
            focusable={false}
            height={7}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": 15,
                  "position": "absolute",
                  "top": "100%",
                },
                Object {
                  "flex": 0,
                  "height": 7,
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="bottom"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="1"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "bottom",
                  ]
                }
                height={6}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={-30}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={7}
            bbWidth="100%"
            focusable={false}
            height={7}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": 15,
                  "position": "absolute",
                  "top": -6,
                },
                Object {
                  "flex": 0,
                  "height": 7,
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="top"
                  x1="0"
                  x2="0"
                  y1="1"
                  y2="0"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "top",
                  ]
                }
                height={6}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={-30}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={22}
            bbWidth={22}
            focusable={false}
            height={22}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": -6,
                  "position": "absolute",
                  "top": -6,
                },
                Object {
                  "flex": 0,
                  "height": 22,
                  "width": 22,
                },
              ]
            }
            width={22}
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={21}
                  cy={21}
                  fx={21}
                  fy={21}
                  gradient={
                    Array [
                      0.7142857142857143,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="topLeft"
                  rx={21}
                  ry={21}
                />
              </RNSVGDefs>
              <RNSVGPath
                d="M0,21 a21,21 0 0 1 21 -21 v6 a15,15 0 0 0 -15,15 h-6 Z"
                fill={
                  Array [
                    1,
                    "topLeft",
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={22}
            bbWidth={22}
            focusable={false}
            height={22}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": "100%",
                  "position": "absolute",
                  "top": -6,
                  "transform": Array [
                    Object {
                      "translateX": -15,
                    },
                  ],
                },
                Object {
                  "flex": 0,
                  "height": 22,
                  "width": 22,
                },
              ]
            }
            width={22}
          >
            <RNSVGGroup
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            >
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={0}
                  cy={21}
                  fx={0}
                  fy={21}
                  gradient={
                    Array [
                      0.7142857142857143,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="topRight"
                  rx={21}
                  ry={21}
                />
              </RNSVGDefs>
              <RNSVGPath
                d="M0,0 a21,21 0 0 1 21,21 h-6 a15,15 0 0 0 -15,-15 v-6 Z"
                fill={
                  Array [
                    1,
                    "topRight",
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={22}
            bbWidth={22}
            focusable={false}
            height={22}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": -6,
                  "position": "absolute",
                  "top": "100%",
                  "transform": Array [
                    Object {
                      "translateY": -15,
                    },
                  ],
                },
                Object {
                  "flex": 0,
                  "height": 22,
                  "width": 22,
                },
              ]
            }
            width={22}
          >
            <RNSVGGroup
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            >
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={21}
                  cy={0}
                  fx={21}
                  fy={0}
                  gradient={
                    Array [
                      0.7142857142857143,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="bottomLeft"
                  rx={21}
                  ry={21}
                />
              </RNSVGDefs>
              <RNSVGPath
                d="M21,21 a21,21 0 0 1 -21,-21 h6 a15,15 0 0 0 15,15 v6 Z"
                fill={
                  Array [
                    1,
                    "bottomLeft",
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={22}
            bbWidth={22}
            focusable={false}
            height={22}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": "100%",
                  "position": "absolute",
                  "top": "100%",
                  "transform": Array [
                    Object {
                      "translateX": -15,
                    },
                    Object {
                      "translateY": -15,
                    },
                  ],
                },
                Object {
                  "flex": 0,
                  "height": 22,
                  "width": 22,
                },
              ]
            }
            width={22}
          >
            <RNSVGGroup
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            >
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={0}
                  cy={0}
                  fx={0}
                  fy={0}
                  gradient={
                    Array [
                      0.7142857142857143,
                      168826920,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="bottomRight"
                  rx={21}
                  ry={21}
                />
              </RNSVGDefs>
              <RNSVGPath
                d="M21,0 a21,21 0 0 1 -21,21 v-6 a15,15 0 0 0 15,-15 h6 Z"
                fill={
                  Array [
                    1,
                    "bottomRight",
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          onLayout={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
              },
              undefined,
              Array [
                Object {
                  "backgroundColor": "#F7F8FA",
                  "borderRadius": 14,
                  "padding": 16,
                },
                Object {
                  "alignSelf": "stretch",
                },
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Array [
                  Object {
                    "color": "#25282D",
                  },
                  Object {
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0.0125,
                    "lineHeight": 21,
                    "textAlign": "left",
                  },
                ],
                Object {
                  "color": "#FEB027",
                  "paddingVertical": 8,
                },
              ]
            }
          >
            hello world
          </Text>
          <View>
            <View>
              Hello world
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
